// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Video Default renders correctly 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    class="ecl-video"
    controls=""
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://euc-vod.fl.freecaster.net/12/224712/HD_I224712EN1W.mp4"
      type="video/mp4"
    />
  </video>
</jest>
`;

exports[`Video Default renders correctly with autoplay, loop and muted 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    autoplay=""
    class="ecl-video"
    controls=""
    loop=""
    muted=""
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://euc-vod.fl.freecaster.net/12/224712/HD_I224712EN1W.mp4"
      type="video/mp4"
    />
  </video>
</jest>
`;

exports[`Video Default renders correctly with extra attributes 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    class="ecl-video"
    controls=""
    data-test="data-test-value"
    data-test-1="data-test-value-1"
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://euc-vod.fl.freecaster.net/12/224712/HD_I224712EN1W.mp4"
      type="video/mp4"
    />
  </video>
</jest>
`;

exports[`Video Default renders correctly with extra class names 1`] = `
<jest>
  <video
    aria-label="Big Buck Bunny - Video"
    class="ecl-video custom-class--video"
    controls=""
    poster="https://inno-ecl.s3.amazonaws.com/media/examples/example-image.jpg"
  >
    <source
      src="https://euc-vod.fl.freecaster.net/12/224712/HD_I224712EN1W.mp4"
      type="video/mp4"
    />
  </video>
</jest>
`;
